--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <div class="form-container">
-        <p>Register a New User</p>
-        <form method="post" action="register.php"> <!-- Point to register.php script -->
-            <!-- Add form fields  -->
+        <p>Login</p>
+        <form method="post" action="login.php"> <!-- Point to login.php script -->
+            <!-- Add form fields for username and password -->
             <div class="form-field">
                 <input type="text" name="username" placeholder="User Name">
             </div>
@@ -15,25 +15,13 @@
                 <input type="password" name="password" placeholder="Password">
             </div>
             <div class="form-field">
-                <input type="password" name="confirmPassword" placeholder="Confirm Password">
-            </div>
-            <div class="form-field">
-                <input type="text" name="firstname" placeholder="First Name">
-            </div>
-            <div class="form-field">
-                <input type="text" name="lastname" placeholder="Last Name">
-            </div>
-            <div class="form-field">
-                <input type="text" name="mobile" placeholder="Mobile">
-            </div>
-            <div class="form-field">
-                <input type="submit" value="Register">
+                <input type="submit" value="Login">
             </div>
         </form>
+
+        <a href="/register.html">No Account? Register here!</a>
+
+
     </div>
 </body>
 </html>
-
-
-
-
