--- a/register.html
+++ b/register.html
@@ -26,6 +26,12 @@
                 <input type="text" name="lastname" placeholder="Last Name">
             </div>
             <div class="form-field">
+                <input type="text" id="AddressLine" name="AddressLine" placeholder="Address Line">
+            </div>
+            <div class="form-field">
+                <input type="text" name="AddressLine2" placeholder="Address Line 2">
+            </div>
+            <div class="form-field">
                 <input type="text" name="mobile" placeholder="Mobile">
             </div>
             <div class="form-field">
