--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </form>
 
-        <a href="register.html">No Account? Register here!</a>
+        <a href="register.php">No Account? Register here!</a>
 
 
     </div>
